--- a/Bank_Marketing.ipynb
+++ b/Bank_Marketing.ipynb
@@ -2018,7 +2018,8 @@
     "ExecuteTime": {
      "end_time": "2020-09-18T03:17:07.130770Z",
      "start_time": "2020-09-18T03:17:07.122414Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2035,6 +2036,76 @@
    ],
    "source": [
     "Image( \"image/Hyphoteses_Map.png\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.1 Creation of Hyphoteses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.1 Person Hyphoteses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.2 Communication Hyphoteses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.3 Time Hyphoteses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.4 Social - Economic Hyphoteses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.2 Final List of Hyphoteses"
    ]
   },
   {
