--- a/Bank_Marketing.ipynb
+++ b/Bank_Marketing.ipynb
@@ -2047,45 +2047,95 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### 2.1.1 Person Hyphoteses"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "**1.** personal loan\n",
+    "\n",
+    "**2.** credit in default\n",
+    "\n",
+    "**3.** marital status\n",
+    "\n",
+    "**4.** age\n",
+    "\n",
+    "**5.** job\n",
+    "\n",
+    "**6.** education\n",
+    "\n",
+    "**7.** housing loan\n",
+    "\n",
+    "**8.** gender"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### 2.1.2 Communication Hyphoteses"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "**1.** number contacts\n",
+    "\n",
+    "**2.** outcome previous marketing\n",
+    "\n",
+    "**3.** type\n",
+    "\n",
+    "**4.** duration\n",
+    "\n",
+    "**5.** attempts"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### 2.1.3 Time Hyphoteses"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "**1.** week\n",
+    "\n",
+    "**2.** day\n",
+    "\n",
+    "**3.** number of contacts before campaign\n",
+    "\n",
+    "**4.** days after last contact\n",
+    "\n",
+    "**5.** month\n",
+    "\n",
+    "**6.** day of week\n",
+    "\n",
+    "**7.** number of contacts\n",
+    "\n",
+    "**8.** holidays\n",
+    "\n",
+    "**9.** year"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2095,11 +2145,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**1.** number of employees\n",
+    "\n",
+    "**2.** consumer confidence\n",
+    "\n",
+    "**3.** employment variation\n",
+    "\n",
+    "**4.** consumer price\n",
+    "\n",
+    "**5.** euribor3\n",
+    "\n",
+    "**6.** social class"
+   ]
   },
   {
    "cell_type": "markdown",
